--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Astray Linux
 subtitle: A Linux guy, some study logs!
-description: "wait a minute, I'm thinking!"
+description: "Most days I wake up thinking I’m the luckiest bastard alive."
 author: Helen Zh
 #language: zh-Hans 
 language: default
@@ -18,15 +18,21 @@ baidu_analytics: a34fb8095f675f64aba62bb6ac621bf8
 avatar: "/head.png"
 swiftype_key: aTKdVx74VsysXTzhBxme
 creative_commons: by-nc-sa
-social:
-    github: https://github.com/astraylinux
-    weibo: http://weibo.com/u/2464721237
-    facebook: https://www.facebook.com/astraylinux
+
+social_github: 
+  link: https://github.com/astraylinux
+  icon: "fa fa-github-alt"
+social_weibo: 
+  link: http://weibo.com/u/2464721237
+  icon: "fa fa-weibo"
+social_facebook: 
+  link: https://www.facebook.com/astraylinux
+  icon: "fa fa-facebook"
 
 feed:
-    type: atom
-    path: /atom.xml
-    limit: 20
+  type: atom
+  path: /atom.xml
+  limit: 20
 
 #
 
@@ -93,5 +99,17 @@ time_format: HH:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 8
+index_generator:
+  per_page: 8
+
+archive_generator:
+  per_page: 24
+  yearly: true
+  monthly: true
+
+tag_generator:
+    per_page: 24
+
 pagination_dir: page
+
+
