--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ timezone:
 #for next
 duoshuo_shortname: astraylinux
 baidu_analytics: a34fb8095f675f64aba62bb6ac621bf8
+google_analytics: UA-65010621-1
 avatar: "/head.png"
 #swiftype_key: aTKdVx74VsysXTzhBxme
 creative_commons: by-nc-sa
